--- a/src/components/UI/Input/Input.css
+++ b/src/components/UI/Input/Input.css
@@ -1,3 +1,7 @@
+* {
+  outline: none;
+  outline: 0;
+}
 .Input {
   width: 100%;
   padding: 10px;
@@ -25,4 +29,8 @@ box-sizing: border-box;
 .InputElement:focus {
   outline: none;
   background-color: #ddd;
+}
+
+.Invalid {
+  border: 1px solid red;
 }
